--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,5 @@ Flask-WTF==0.8.2
 Flask-MongoKit==0.6
 gunicorn==0.16.1
 redis==2.7.2
-rq==0.3.7
-rq-dashboard==0.3.1
-
+requests==1.2.3
+rq-scheduler==0.3.6
