--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 Flask==0.9
 Flask-WTF==0.8.2
 Flask-MongoKit==0.6
+Flask-Mail==0.8.2
 gunicorn==0.16.1
-redis==2.7.2
 requests==1.2.3
+rq==0.3.8
 rq-scheduler==0.3.6
 rq-dashboard==0.3.1
