--- a/deploy/supervisord.conf
+++ b/deploy/supervisord.conf
@@ -17,7 +17,7 @@ environment=
     MONGO_URI='{{mongo_db}}',
     SECRET_KEY={{secret_key}},
     APPLICATION_SETTINGS=production.py,
-    MAIL_SERVER='{{mail_username}}',
+    MAIL_SERVER='{{mail_server}}',
     MAIL_PORT={{mail_port}},
     MAIL_USERNAME='{{mail_username}}',
     MAIL_PASSWORD='{{mail_password}}',
