Add the job_id to regulated jobs and a way to clear scheduled jobs.
Add higher CSW timeout
Update rq-scheduler to get the timeout parameter
Directly add emails to a queue, don't schedule them.

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,11 @@ Flask-Mail==0.8.2
 gunicorn==0.16.1
 requests==1.2.3
 rq==0.3.8
-rq-scheduler==0.3.6
+
+# Need 'timeout' parameter supported, which is not in the most recent release (0.3.6)
+#rq-scheduler==0.3.6
+git+https://github.com/ui/rq-scheduler.git
+
 rq-dashboard==0.3.1
+OWSLib
 pytz
