add SERVER_NAME to supervisord deploy

--- a/deploy/supervisord.conf
+++ b/deploy/supervisord.conf
@@ -24,7 +24,8 @@ environment=
     MAIL_DEFAULT_SENDER='{{mail_default_sender}}',
     MAILER_DEBUG={{mailer_debug}},
     MAIL_DEFAULT_TO='{{mail_default_to}}',
-    MAIL_DEFAULT_LIST='{{mail_default_list}}'
+    MAIL_DEFAULT_LIST='{{mail_default_list}}',
+    SERVER_NAME='{{server_name}}',
 
 
 [rpcinterface:supervisor]
