--- a/requirements.txt
+++ b/requirements.txt
@@ -3,15 +3,12 @@ Flask-WTF==0.9.0
 Flask-MongoKit==0.6
 Flask-Mail==0.9.0
 gunicorn==0.16.1
-requests==1.2.3
 rq==0.3.8
-
 # Need 'timeout' parameter supported, which is not in the most recent release (0.3.6)
 #rq-scheduler==0.3.6
 git+https://github.com/ui/rq-scheduler.git
-
 rq-dashboard==0.3.1
-lxml
+
+pyoos
 OWSLib
-pytz
 geojson
