--- a/deploy/supervisord.conf
+++ b/deploy/supervisord.conf
@@ -59,4 +59,4 @@ directory=/home/monitoring/ioos-service-monitor
 stopsignal=TERM
 autostart=false
 redirect_stderr=true
-stdout_logfile=logs/workers.log
+stdout_logfile=logs/workers-%(process_num).log
