--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask==0.10.1
 Flask-WTF==0.9.0
 Flask-MongoKit==0.6
 Flask-Mail==0.9.0
+Flask-Script==2.0.3
 gunicorn==0.16.1
 
 # Need UTC times which will be 0.3.12 (not relased on PyPi yet)
