--- a/deploy/supervisord.conf
+++ b/deploy/supervisord.conf
@@ -26,6 +26,10 @@ environment=
     MAIL_DEFAULT_TO='{{mail_default_to}}',
     MAIL_DEFAULT_LIST='{{mail_default_list}}',
     SERVER_NAME='{{server_name}}',
+    MAIL_COMMENTS_TO={{mail_comments_to}},
+    CAPTCHA_DB={{captcha_db}},
+    CAPTCHA_PREGEN_PATH={{captcha_pregen_path}}
+    
 
 
 [rpcinterface:supervisor]
