Adds pandas as a project dependency

--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,4 @@ git+https://github.com/ioos/petulant-bear.git
 git+https://github.com/ioos/compliance-checker.git
 Flask-Captcha==0.1.8
 six==1.9.0
+pandas==0.16.1
