--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ git+https://github.com/geopython/OWSLib.git
 git+https://github.com/ioos/wicken.git
 geojson
 git+https://github.com/ioos/petulant-bear.git
-git+https://github.com/ioos/compliance-checker.git
+compliance-checker==1.1.1
 Flask-Captcha==0.1.8
 six==1.9.0
 pandas==0.16.1
