Complete refactor of service indexing
- Refactors service indexing to use CKAN
- Fixes views with updated metadata
- Updates providers dictionary with new org names
- Updates some stale links

--- a/config.yml
+++ b/config.yml
@@ -41,6 +41,7 @@ COMMON: &common
   # Captcha Settings
   CAPTCHA_PREGEN_PATH: 'db/images'
   SQLALCHEMY_DATABASE_URI: 'sqlite:///../db/captcha.db'
+  CKAN_CATALOG: https://data.ioos.us/
 
 
 PRODUCTION: &production
